# ikvm-gw

./: .gitignore  Cargo.toml  M0_RESULT.md  README.md  REQUIREMENTS.md  pyproject.toml
.github/workflows/: pypi.yaml
native/ikvm_ast2100/: Cargo.toml  pyproject.toml
native/ikvm_ast2100/src/: huffman.rs  lib.rs  lib.rs.debug
rust/: bitreader.rs  idct.rs  lib.rs  quant.rs  tables.rs
spike/: aten_protocol.py  m0_probe.py
src/ikvm_gateway/: __main__.py  app.py  framebuffer.py
src/ikvm_gateway/downstream/: rfb_server.py  ws_app.py
src/ikvm_gateway/input/: translate.py
src/ikvm_gateway/upstream/: auth.py  client.py  protocol.py
tests/: test_aten_protocol.py  test_downstream.py  test_input_translate.py  test_package_import.py  test_upstream_decode.py
tools/: capture_frame.py  check_downstream.py  e2e_live.py  launch_viewer.py
web/: viewer.html
