[project]
name = "ikvm-gateway"
version = "0.0.1"
requires-python = ">=3.12"
dependencies = [
    "websockets>=14",
    "prompt_toolkit",
    "numpy>=2",
]

[dependency-groups]
dev = [
    "pytest",
    "maturin>=1.7,<2",
    "pillow",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ikvm_gateway", "spike"]
