[project]
name = "ikvm-gateway"
version = "0.0.1"
requires-python = ">=3.12"
license = { text = "LGPL-3.0-or-later" }
classifiers = [
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
]
dependencies = [
    "websockets>=14",
    "prompt_toolkit",
    "numpy>=2",
]

[dependency-groups]
dev = [
    "pytest",
    "maturin>=1.7,<2",
    "pillow",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ikvm_gateway", "spike"]
